--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,16 @@ html {
 li {
   list-style: none;
   text-decoration: none;
+  margin: 0;
 }
-
+/* ul{
+  margin: 0;
+  padding: 0;
+} */
+section{
+  margin: 0;
+  padding: 0;
+}
 p {
   margin: 0;
   padding: 0;
@@ -45,9 +53,21 @@ body {
   font-style: normal;
   color: var(--color_black);
   font-weight: 700;
-  font-size: 26px;
+  font-size: 26px; 
   line-height: 1.19;
   letter-spacing: 0.03em;
+  text-decoration: none;
+  margin-right: 86px;
+}
+.logo-lnk {
+  font-family: Raleway;
+  font-style: normal;
+  color: var(--color_black);
+  font-weight: 700;
+  font-weight: bold;
+font-size: 22px;
+line-height: 26px;
+letter-spacing: 0.03em;
   text-decoration: none;
   margin-right: 86px;
 }
@@ -63,14 +83,51 @@ body {
   letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--color_black);
-
-  /* margin-right: 50px; */
+  /* margin: 0;
+  margin-right: 30px; */
+}
+.nav-links .item:not(:last-child) {
+  margin: 0;
+  padding: 0;
+  margin-right: 50px;
+}
+/* .item:last-child{
+  margin-right: 0; */
+/* } */
+.nav-links .emeil {
+  color: var(--color_text);
+}
+.decore{
+  height: 12px ;
+  width: 16px;
+  margin-bottom: -4px;
+  margin-right: 10px;
+  
+}
+.decor{
+  height: 15px ;
+  width: 10px;
+  margin-right: 10px;
+  margin-bottom: -4px;
+}
+.how:hover, .how:focus{
+  --color5:#2196F3;
+  cursor: pointer;
+}
+.nav-links .phon {
+  color: var(--color_text);
 }
 
+.nav-links .current {
+  color: var(--color_blu);}
 .item {
   text-decoration: none;
+  
 }
-
+.itema{
+ 
+  margin-right: 30px;
+}
 .links:hover,
 .links:focus {
   color: var(--color_blu);
@@ -78,9 +135,8 @@ body {
 
 .head {
   display: inline-block;
-  display: flex;
+  display: flex; 
   /* width: 100%; */
-  /* min-*/
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -93,12 +149,8 @@ body {
   display: block;
   display: flex;
   align-items: center;
-}
-.nav-lin {
-  display: flex;
-  justify-content: space-between;
-  /* padding-left: 0; */
-}
+} 
+
 .nav-links {
   display: block;
   display: flex;
@@ -110,25 +162,17 @@ body {
   flex: end;
   margin-left: auto;
 }
-.nav-links .item:not(:last-child) {
-  margin-right: 50px;
-}
-.nav-links .emeil {
-  color: var(--color_text);
-}
-.nav-links .phon {
-  color: var(--color_text);
+.mar{
+  margin: 0;
+  margin-left: 30px;
 }
 
-.nav-links .current {
-  color: var(--color_blu);
-}
 /* 1600 */
 .container {
   display: flex;
   flex-direction: row;
-  /* text-align: center;
-  align-items: center; */
+  text-align: center;
+  align-items: center;
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -139,23 +183,39 @@ body {
   margin-bottom: 0;
   padding-top: 94px;
   padding-bottom: 94px;
-  /* padding-left: 15px; */
-  /* padding-right: 15px; */
-  border-top: 1px solid #ececec;
+  padding-left: 15px;
+  padding-right: 15px;
+  
   /* background-color: #E5E5E5; */
+} 
+.line{
+  border-top: 1px solid #ececec;
 }
-/* .box {
-  outline: 2px solid ; */
-/* } */
+.box {
+  /* outline: 2px solid ;  */
+ }
 .bk {
   background: #f5f4fa;
 }
-.abo {
-  /* background-image: url(../img/Head.png); */
-  background-color: rgba(47, 48, 58, 0.8);
-  width: 100%;
-
+.gero{
+  position: relative;
+  max-width: 1600px;
   height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image:linear-gradient(to right,rgba(47, 48, 58, 0.8),rgba(47, 48, 58, 0.8)),url(../img/Head.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.abo {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  right: 0;
+  left:0;
+  bottom:0;
+  /* background-color: rgba(47, 48, 58, 0.8); */
   margin-top: 0;
   text-align: center;
 }
@@ -167,14 +227,15 @@ body {
 
   color: var(--color_white);
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+font-size: 44px;
+line-height: 60px;
   letter-spacing: 0.06em;
   text-align: center;
   padding-top: 200px;
   margin-top: 0;
   margin-bottom: 0;
   margin-bottom: 46px;
+  text-transform: uppercase;
 }
 .txt {
   font-size: 14px;
@@ -190,53 +251,109 @@ body {
 
 .buti {
   text-decoration: none;
+  font-weight:900;
   font-size: 16px;
-  line-height: 1.9;
+  line-height: 1.88;
   color: var(--color_white);
   background: #2196f3;
   padding-left: 32px;
   padding-right: 32px;
   margin-bottom: 0;
   margin-top: 0;
-  margin-right: auto;
-  margin-left: auto;
+  
   padding-top: 10px;
   padding-bottom: 10px;
 }
 /* Мы гарантируем */
 
+  .fly{ 
+    display: inline-flex;
+    align-items: center;
+    text-align: center;
+    font-weight: 900;
+    font-size: 16px;
+    line-height: 30px;
+   
+    letter-spacing: 0.06em;
+  color: var(--color_white);
+  background: #2196f3;
+  padding-left: 29px;
+  /* padding-right: 64px; */
+  margin-bottom: 0;
+  margin-top: 0;
+  
+  padding-top: 10px;
+  padding-bottom: 10px;}
+  
+  .fly::after{
+  content: 'qw';
+  font-size: 24px;
+  line-height: 24px;
+
+  /* width:30; 
+  height: 30; */
+  color: transparent;
+  /* margin-left: 10px; */
+  background-repeat: no-repeat;
+  background-image: url(../img/fly.svg);
+  background-size: contain;
+  background-position: center;
+  padding-right:  28px;  
+
+}
 .title {
-  display: block;
-  display: flex;
-  width: 270;
-  font-weight: 700;
+  
+  /* display: flex; */
+ 
+  font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  justify-content: center;
+  text-align: center;
+ 
   margin-top: 0;
   margin-bottom: 0;
   color: var(--color_black);
   margin-top: 30px;
   margin-bottom: 10px;
+  margin-right: 30px;
 }
+.no{
+  margin-right: 0px;
+  
+}
+.vel{
+  text-transform: uppercase;
+}
+
 .transp {
   display: flex;
+  position: absolute;
+  left:0;
+  bottom:6px;
   height: 70px;
+  width: 100%;
   background: rgba(47, 48, 58, 0.8);
-  border-radius: 0px 0px 4px 4px;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: 16px;
   justify-content: center;
   text-align: center;
   align-items: center;
-  margin-bottom: 0;
+  margin: 0;
   letter-spacing: 0.03em;
-  margin-top: 0;
+  text-transform: uppercase;
+  
   margin-right: auto;
   margin-left: auto;
-  margin-top: -9px;
   color: #ffffff;
+}
+.comand{
+  font-weight: bold;
+font-size: 36px;
+line-height: 42px;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
 }
 .centr {
   display: flex;
@@ -258,11 +375,12 @@ body {
   flex-direction: row;
   text-align: left;
   padding-left: 0;
-  margin-top: 0;
-  margin-left: 0;
+  margin: 0;
+  
 }
 
 .doit-now {
+  position: relative;
   margin-right: 30px;
   margin-bottom: 0;
   flex-wrap: wrap;
@@ -272,12 +390,30 @@ body {
   margin-right: 0px;
 }
 .pic {
-  align-items: center;
+  display: flex;
+  /* align-items: center; */
   width: 270px;
   height: 120px;
   background-color: #f5f4fa;
+  background-size: auto auto;
   /* padding-top: 25px;
   padding-bottom: 25px; */
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  
+}
+.ant{
+background-image: url('../img/antenna1.svg');
+
+}
+.clock{
+background-image: url('../img/clock1.svg');
+}
+.vector{
+background-image: url('../img/Vector.svg');
+}
+.astro{
+ background-image: url('../img/astronaut1.svg'); 
 }
 
 /* Чем мы занимаемся */
@@ -287,57 +423,119 @@ body {
   color: var(--color_black);
   font-size: 36px;
   line-height: 1.16;
+  
   margin-top: 0;
   margin-bottom: 0;
   margin-bottom: 50px;
 }
 
 .titles {
-  font-weight: 700;
+  font-weight: 400; 
+  font-size: 16px;
+  line-height: 19px;
   text-align: center;
   margin-top: 0;
   margin-bottom: 0;
   margin-top: 10px;
   margin-bottom: 10px;
   color: var(--color_text);
+  
 }
+
+
 .social {
+
   display: flex;
-  margin-right: 35px;
+  margin-right: 10px;
+  /* padding-inline-start: 0; */
+  width: 44px;
+  height: 44px;
+  border-radius: 50% 50%;
+  background-color: transparent;
+  align-items: center;
+  padding-left: 11px;
 }
-.nav-links .social:last-child {
+.socia {
+  --color3:#ffffff;
+  display: flex;
+  margin-right: 10px;
+  padding-inline-start: 0;
+  width: 44px;
+  height: 44px;
+  border-radius: 50% 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  align-items: center;
+  padding-left: 11px;
+}
+.nav-lin {
+  
+  display: flex;
+  padding-left: 0;
+  margin-left: 32px;
+  align-items: center;
+ 
+}
+.soc{
+  width: 20px;
+  height: 20px;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;}
+.nav-lin .social:last-child {
   margin-right: 0;
 }
+.social:hover, .social:focus{
+  --color3:#ffffff;
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #2196F3;
+}
+.socia:hover, .socia:focus{
+ 
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #2196F3;
+}
 .cent {
-  display: block;
-  display: flex;
-  padding-left: 40px;
+ 
+  background-repeat: no-repeat;
+  background-position:  50% 50%;
+  background-size: contain;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  
 }
 
 .client {
-  align-items: center;
+  display: flex;
   width: 170px;
   height: 90px;
   background-color: #f5f4fa;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  border: 1px solid #afb1b8;
-  box-sizing: border-box;
-  border-radius: 4px;
   margin-right: 30px;
-  /* margin-left: auto;
-  margin-right: auto; */
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+  
+ 
 }
 .client:last-child {
-  margin-right: 0;
+  margin-right: 0; 
+}
+.ho:hover, .ho:focus{
+  --color3:#2196F3;
+  cursor: pointer;
+  border: 1px solid #2196F3;
 }
 footer {
   background-color: var(--color_black);
 }
 .foot {
   display: flex;
-  /* width: 100%;
-  min- */
+  width: 100%;
+ 
   padding-bottom: 28px;
   padding-top: 48px;
   width: 1200px;
@@ -347,11 +545,20 @@ footer {
   color: var(--color_white);
 }
 .down {
+  font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
   padding-left: 40px;
 }
 .one {
   margin-right: 46px;
   justify-content: start;
+}
+.left{
+  text-align: left;
+  text-transform: uppercase;
+  padding-left: 0;
 }
 
 .two {
@@ -364,9 +571,7 @@ footer {
   text-decoration: none;
   font-size: 14px;
   line-height: 1.71;
-  /* or 171% */
-
-  letter-spacing: 0.03em;
+    letter-spacing: 0.03em;
 
   color: rgba(255, 255, 255, 0.6);
 }
@@ -375,15 +580,15 @@ footer {
   padding-bottom: 21px;
   text-align: center;
   background-color: var(--color_black);
-  color: var(--color_white);
+  color: color: rgba(255, 255, 255, 0.4);
   border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 .card {
   background: #ffffff;
   height: 422px;
-  /* box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 1px 3px rgba(0, 0, 0, 0.12); */
-  /* border: 1px solid tomato; */
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+ 
 }
 .containe {
   display: flex;
@@ -401,34 +606,36 @@ footer {
   margin-bottom: 0;
   padding-top: 50px;
   padding-bottom: 94px;
-
-  /* background-color: #E5E5E5; */
+  
+  background-color: #ffffff;
 }
 .port {
   color: var(--color_black);
   font-weight: 700;
   font-size: 18px;
-  line-height: 2;
+  line-height: 36px;
   letter-spacing: 0.06em;
   color: #212121;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
+  margin-top: 20px;
+  
   margin-bottom: 4px;
   padding-left: 24px;
   width: 370px;
+  height: 30px;
 }
 .name {
   font-size: 16px;
-  line-height: 1.88;
+  line-height: 30px;
   color: #757575;
   letter-spacing: 0.03em;
   margin-top: 0;
   margin-bottom: 0;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   padding-left: 24px;
-
+  height: 30px;
   width: 370px;
-}
+} 
 .line-blo {
   display: flex;
   flex-wrap: wrap;
@@ -436,27 +643,55 @@ footer {
   text-align: left;
   padding-left: 0;
   margin-top: 0;
+  
+}
+.linse{
+  border: 1px solid #EEEEEE;
+  margin-bottom: 30px;
+}
+.linse:nth-last-of-type(-n+3){
+  margin-bottom: 0;
+
 }
 
+button{
+  padding: 0;
+  border: none;
+  font-family: Roboto;
+  background-color: transparent;
+ 
+  cursor: pointer;
+  /* font-weight: 500;
+font-size: 16px;
+line-height: 26px; */
+}
+.bi:hover, .bi:focus {
+  color: var(--color_white);
+  background-color: var(--color_blu);
+  cursor: pointer;
+}
 .knopka {
   display: block;
   text-align: center;
-
-  margin-top: 94px;
+  padding-top: 94px;
+  border-top: 1px solid #ECECEC;
+  
 }
 .knopk {
+  
   height: 38px;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.62;
+  line-height: 25px; 
   background: #f5f4fa;
   border-radius: 4px;
   text-align: center;
-  letter-spacing: 0.03em;
+  /* letter-spacing: 0.03em; */
   padding-left: 22px;
   padding-right: 22px;
   margin-right: 8px;
   color: #212121;
+  
 }
 .knopka .knopk:last-child {
   margin-right: 0;
@@ -464,3 +699,4 @@ footer {
 .line-blo:last-child .doit-now {
   margin-right: 0;
 }
+
